spring-cloud-gateway-client/client-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: client-service
    namespace: jenkins
spec:
    replicas: 1
    selector:
     matchLabels:
       app: client-service
    template:
        metadata:
          labels:
            app: client-service
        spec:
          containers:
          - name: client-service
            image: leedh/k8s-client-k8s:1.0.9
            ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: jenkins
spec:
  type: ClusterIP
  selector:
    app: client-service
  ports:
    - port: 8080
      targetPort: 8080
      name: http
